# bluehook

./: .gitignore  README.md
.github/workflows/: deploy.yml  worker_deploy.yml
k8s/: certificate.yml  clusterissuer.yml  deployment.yml  ingress.yml  secrets.yml  service.yml  write_k8s.py
web/: bun.lockb  package.json  tailwind.config.ts
web/app/: form.tsx  layout.tsx  page.tsx
web/lib/: database.ts
worker/: .gitignore  Cargo.toml  Dockerfile  Makefile  schema.sql
worker/.kamal/: secrets
worker/config/: deploy.yml
worker/src/: bulk_search_tree.rs  http.rs  main.rs  postgres.rs
