[package]
name = "worker"
version = "0.0.1"
edition = "2021"

[dependencies]
rsky-firehose = { git = "https://github.com/blacksky-algorithms/rsky.git", rev = "22803e13" }
rsky-lexicon = { git = "https://github.com/blacksky-algorithms/rsky.git", rev = "22803e13" }
tokio-tungstenite = { version = "0.18.0", features = ["native-tls"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3.28"
serde_cbor = "0.11.2"
serde_json = "1.0.133"
serde = "1.0.215"
chrono = "0.4.38"
ed25519-dalek = "2.1.1"
hex = "0.4.3"
reqwest = "0.12.9"
url = "2.5.3"
rustls = "0.23.17"
webpki-roots = "0.26.6"
deadpool-postgres = "0.14.0"
tokio-postgres-rustls = "0.13.0"
viz = "0.4.17"
rust-crypto = "0.2.36"
